--- a/index.html
+++ b/index.html
@@ -89,120 +89,109 @@
       <div class="slides"><section  data-markdown><script type="text/template"></script></section><section  data-markdown><script type="text/template"><!-- .slide: class="drop" -->
 <div class="" style="position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center" absolute="true">
 
-## A Digital Humanities for Ismaili Studies
+### 
+### <font color="brown"> Digital Humanities for Ismaili Studies </font>
+ 
+<img src="Digital Turn in the Study of Islamic History/Slide0.png" alt="" style="object-fit: scale-down">
 
-```
-</div></script></section><section ><section data-markdown><script type="text/template"><!-- .slide: class="has-light-background drop" data-background-color="rgb(200, 300, 200)" -->
+
+
+###### أُولَٰئِكَ كَتَبَ فِي قُلُوبِهِمُ الْإِيمَانَ وَأَيَّدَهُم بِرُوحٍ مِّنْهُ
+</div></script></section><section ><section data-markdown><script type="text/template"><!-- .slide: class="drop" -->
 <div class="" style="position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center" absolute="true">
 
-```
-# What?
-* The Need
+### Introduction
+<img src="Pasted image 20241024123751.png" alt="" style="object-fit: scale-down">
+</div></script></section><section data-markdown><script type="text/template"><!-- .slide: class="drop" -->
+<div class="" style="position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center" absolute="true">
+
+<img src="Pasted image 20241024125615.png" alt="" style="object-fit: scale-down">
+</div></script></section></section><section ><section data-markdown><script type="text/template"><!-- .slide: class="drop" -->
+<div class="" style="position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center" absolute="true">
+
+### Training and workshops 
+<img src="Pasted image 20241024120443.png" alt="" style="width: 400px; object-fit: fill">
+</div></script></section><section data-markdown><script type="text/template"><!-- .slide: class="drop" -->
+<div class="" style="position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center" absolute="true">
+
+<img src="https://bloximages.chicago2.vip.townnews.com/eacourier.com/content/tncms/assets/v3/editorial/4/d3/4d3a119c-c8b5-11eb-b838-5bb61e1425e6/60c003f17fdf0.image.png" alt="" style="width: ?crop=600%2C315%2C0%2C63&resize=438%2C230&order=crop%2Cresizepx; object-fit: fill">
+
+
+<split no-margin> 
+A bigger fish than expected?
+(machine learning, AI, ... )
+</split>
+</div>
+
+<aside class="notes"><p>a completely new ecosystem
+thousands</p>
+</aside></script></section><section data-markdown><script type="text/template"><!-- .slide: class="drop" -->
+<div class="" style="position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center" absolute="true">
+
+<img src="Digital Turn in the Study of Islamic History/Slide10.png" alt="" style="width: 900px; object-fit: fill">
+</div></script></section><section data-markdown><script type="text/template"><!-- .slide: class="drop" -->
+<div class="" style="position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center" absolute="true">
+
+<img src="Digital Turn in the Study of Islamic History/Slide12.png" alt="" style="object-fit: scale-down">
+</div></script></section><section data-markdown><script type="text/template"><!-- .slide: class="drop" -->
+<div class="" style="position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center" absolute="true">
+
+<img src="Digital Turn in the Study of Islamic History/Slide13.png" alt="" style="object-fit: scale-down">
+
+
+#### Existing methods/tools and our needs
+
 * Training programme
-* IIS projects and perspectives <!-- .element: style="background: b" -->
+* Building on current IIS projects
+</div></script></section></section><section ><section data-markdown><script type="text/template"><!-- .slide: class="drop" -->
+<div class="" style="position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center" absolute="true">
+
+# IIS Projects
+
+ISC - MANUSCRIPT DATA
+<img src="Pasted image 20241028171723.png" alt="" style="object-fit: scale-down">
 </div></script></section><section data-markdown><script type="text/template"><!-- .slide: class="drop" -->
 <div class="" style="position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center" absolute="true">
 
-# Details 
+#### Oral History Project
 
-<div align="left">The proposed ‘Digital Humanities for Ismaili Studies’ is a set of practice-oriented workshops aimed at providing essential hands-on training for IIS people. We believe there is a need for a collaborative forum for all digital projects at the IIS where new ideas and prototypes can be shared and discussed. The series will consist of monthly trainings and ‘hackathons,’ with occasional seminars on theory and guest lectures. We will draw on both in-house (AKC) and outside expertise to explore the possibilities afforded by DH and to showcase our specific projects..</div>
-</div></script></section></section><section  data-markdown><script type="text/template"><!-- .slide: class="drop" -->
-<div class="" style="position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center" absolute="true">
+<img src="Pasted image 20241028164036.png" alt="" style="object-fit: scale-down">
 
-# State of the Field
-</div></script></section><section  data-markdown><script type="text/template"><!-- .slide: class="drop" -->
-<div class="" style="position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center" absolute="true">
-
-# Potential
-
-
-```
-from the level of potentiality to actuality
-```
-</div></script></section><section ><section data-markdown><script type="text/template"><!-- .slide: class="drop" -->
-<div class="" style="position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center" absolute="true">
-<!-- .slide: class="drop" -->
-<div class="" style="position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center" absolute="true">
-
-# Slide 2.1
-</div></div></script></section><section data-markdown><script type="text/template"><!-- .slide: class="drop" -->
-<div class="" style="position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center" absolute="true">
-
-</div>
-
- 
-### _**This is the Title of this Slide**_
-</div>
-
-
-
-</div>
-
- 
-<img src="Image.jpg" alt="" style="width: 1500px; object-fit: fill">
-
-</div>
-
-
-
-<style>
-.small-indent > ul { 
-   padding-left: 1em;
-}
-</style>
-
-</div>
-
- 
-
-
-</div>
-
-<!-- .element: style="font-size: 13px; display: flex; flex-direction: column; align-items: flex-start; justify-content: space-evenly" class="small-indent" align="left" -->
-
-</div>
-
- source
-###### Source: Copied from Lorem ipsum dolor Generator
-</div>
-</div></script></section></section><section  data-markdown><script type="text/template"><!-- .slide: class="drop" -->
-<div class="" style="position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center" absolute="true">
-
-</div>
-
- 
-# New slide 
-
-</div>
-</div></script></section><section  data-markdown><script type="text/template"><!-- .slide: class="drop" -->
-<div class="" style="position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center" absolute="true">
-
-# Penaltimate Slide
-
-## And the subheading
-
-### *there will be a last one after but in vertical*
-</div></script></section><section ><section data-markdown><script type="text/template"><!-- .slide: class="drop" -->
-<div class="" style="position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center" absolute="true">
-
-# Last one
+ Intangible cultural heritage (IIS Website)
 </div></script></section><section data-markdown><script type="text/template"><!-- .slide: class="drop" -->
+<div class="" style="position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center" absolute="true">
+
+### Ismaili Heritage Project
+
+<img src="https://www.iis.ac.uk/media/2ahb01tp/ismaili-heritage-project-sites-map.jpg" alt="" style="width: ?mode=mapx; height: &height=700&rnd=133474511504470000|20px; object-fit: fill">
+
+1500 Ismaili heritage sites, in 56 countries, 1000 in 28 countries (IIS Website)
+</div></script></section></section><section ><section data-markdown><script type="text/template"><!-- .slide: class="drop" -->
+<div class="" style="position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center" absolute="true">
+
+###  Digitization: a good place to start?
+<img src="Digital Turn in the Study of Islamic History/Slide35.png" alt="" style="object-fit: scale-down">
+</div></script></section><section data-markdown><script type="text/template"><!-- .slide: class="drop" -->
+<div class="" style="position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center" absolute="true">
+
+General trends and problems in DH
+</div>
+
+<aside class="notes"><p>skip this part if you don&#39;t have time</p>
+</aside></script></section><section data-markdown><script type="text/template"><!-- .slide: class="drop" -->
+<div class="" style="position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center" absolute="true">
+
+<img src="Digital Turn in the Study of Islamic History/Slide36.png" alt="" style="object-fit: scale-down">
+</div></script></section><section data-markdown><script type="text/template"><!-- .slide: class="drop" -->
+<div class="" style="position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center" absolute="true">
+
+- 
+<img src="Digital Turn in the Study of Islamic History/Slide37.png" alt="" style="object-fit: scale-down">
+</div></script></section></section><section  data-markdown><script type="text/template"><!-- .slide: class="drop" -->
 <div class="" style="position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center" absolute="true">
 
 ## Thank you
-
--- 
-
-Basta
-
-# Slide 1
-</div></script></section><section data-markdown><script type="text/template">
-# Slide 2.1
-</script></section><section data-markdown><script type="text/template"><!-- .slide: class="drop" -->
-<div class="" style="position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center" absolute="true">
-
-# Slide 2.2
-</div></script></section></section><section  data-markdown><script type="text/template">
+</div></script></section><section  data-markdown><script type="text/template">
 </script></section></div>
     </div>
 
