--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@ thousands</p>
 </div></script></section></section><section ><section data-markdown><script type="text/template"><!-- .slide: class="drop" -->
 <div class="" style="position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center" absolute="true">
 
-# IIS Projects
+### IIS Projects
 
 ISC - MANUSCRIPT DATA
-<img src="Pasted image 20241028171723.png" alt="" style="object-fit: scale-down">
+<img src="Pasted image 20241028171723.png" alt="" style="width: 700px; object-fit: fill">
 </div></script></section><section data-markdown><script type="text/template"><!-- .slide: class="drop" -->
 <div class="" style="position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center" absolute="true">
 
@@ -163,9 +163,13 @@ ISC - MANUSCRIPT DATA
 
 ### Ismaili Heritage Project
 
-<img src="https://www.iis.ac.uk/media/2ahb01tp/ismaili-heritage-project-sites-map.jpg" alt="" style="width: ?mode=mapx; height: &height=700&rnd=133474511504470000|20px; object-fit: fill">
+<img src="Pasted image 20241028173924.png" alt="" style="width: 700px; object-fit: fill">
 
 1500 Ismaili heritage sites, in 56 countries, 1000 in 28 countries (IIS Website)
+</div></script></section><section data-markdown><script type="text/template"><!-- .slide: class="drop" -->
+<div class="" style="position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center" absolute="true">
+
+IQCIL Index of Quranic Citation
 </div></script></section></section><section ><section data-markdown><script type="text/template"><!-- .slide: class="drop" -->
 <div class="" style="position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center" absolute="true">
 
