--- a/index.html
+++ b/index.html
@@ -89,10 +89,9 @@
       <div class="slides"><section  data-markdown><script type="text/template"></script></section><section  data-markdown><script type="text/template"><!-- .slide: class="drop" -->
 <div class="" style="position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center" absolute="true">
 
-### 
 ### <font color="brown"> Digital Humanities for Ismaili Studies </font>
  
-<img src="Digital Turn in the Study of Islamic History/Slide0.png" alt="" style="object-fit: scale-down">
+<img src="Pasted image 20241029113128.png" alt="" style="object-fit: scale-down">
 
 
 
@@ -128,15 +127,15 @@ thousands</p>
 </aside></script></section><section data-markdown><script type="text/template"><!-- .slide: class="drop" -->
 <div class="" style="position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center" absolute="true">
 
-<img src="Digital Turn in the Study of Islamic History/Slide10.png" alt="" style="width: 900px; object-fit: fill">
+<img src="Pasted image 20241029112608.png" alt="" style="object-fit: scale-down">
 </div></script></section><section data-markdown><script type="text/template"><!-- .slide: class="drop" -->
 <div class="" style="position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center" absolute="true">
 
-<img src="Digital Turn in the Study of Islamic History/Slide12.png" alt="" style="object-fit: scale-down">
+<img src="Pasted image 20241029112633.png" alt="" style="object-fit: scale-down">
 </div></script></section><section data-markdown><script type="text/template"><!-- .slide: class="drop" -->
 <div class="" style="position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center" absolute="true">
 
-<img src="Digital Turn in the Study of Islamic History/Slide13.png" alt="" style="object-fit: scale-down">
+<img src="Pasted image 20241029112648.png" alt="" style="width: 700px; object-fit: fill">
 
 
 #### Existing methods/tools and our needs
@@ -165,38 +164,59 @@ ISC - MANUSCRIPT DATA
 
 <img src="Pasted image 20241028173924.png" alt="" style="width: 700px; object-fit: fill">
 
-1500 Ismaili heritage sites, in 56 countries, 1000 in 28 countries (IIS Website)
+1500 Ismaili heritage sites **identified** in 56 countries, **documented** 1000 sites in 28 countries (IIS Website)
 </div></script></section><section data-markdown><script type="text/template"><!-- .slide: class="drop" -->
 <div class="" style="position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center" absolute="true">
 
-IQCIL Index of Quranic Citation
+IQCIL- Index of Quranic Citation in Ismaili Literature
+<img src="Pasted image 20241028234042.png" alt="" style="object-fit: scale-down">
+
+_a compendium of ayas cited in works by Ismaili authors._ (*pilot phase*)
+</div></script></section><section data-markdown><script type="text/template"><!-- .slide: class="drop" -->
+<div class="" style="position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center" absolute="true">
+
+A Bilingual Corpus of Ismaili Texts
+<img src="Pasted image 20241029103351.png" alt="" style="object-fit: scale-down">
 </div></script></section></section><section ><section data-markdown><script type="text/template"><!-- .slide: class="drop" -->
 <div class="" style="position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center" absolute="true">
 
-###  Digitization: a good place to start?
-<img src="Digital Turn in the Study of Islamic History/Slide35.png" alt="" style="object-fit: scale-down">
+Going forward
 </div></script></section><section data-markdown><script type="text/template"><!-- .slide: class="drop" -->
 <div class="" style="position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center" absolute="true">
 
-General trends and problems in DH
+##### Trainings and seminars
+**Basics:**
+- Sustainable academic writing toolboxes
+- Research toolbox for Ismaili Studies
+- Working with plain texts
+--------------------------
+**Complex**
+- Text mining
+- Modelling
+- Distant Reading
+- Mapping
+</div></script></section><section data-markdown><script type="text/template"><!-- .slide: class="drop" -->
+<div class="" style="position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center" absolute="true">
+
+###  Digitization: a good place to start the climb?
+<img src="Pasted image 20241028225320.png" alt="" style="object-fit: scale-down">
 </div>
 
 <aside class="notes"><p>skip this part if you don&#39;t have time</p>
 </aside></script></section><section data-markdown><script type="text/template"><!-- .slide: class="drop" -->
 <div class="" style="position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center" absolute="true">
 
-<img src="Digital Turn in the Study of Islamic History/Slide36.png" alt="" style="object-fit: scale-down">
+bb
+<img src="Pasted image 20241028225337.png" alt="" style="object-fit: scale-down">
 </div></script></section><section data-markdown><script type="text/template"><!-- .slide: class="drop" -->
 <div class="" style="position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center" absolute="true">
 
-- 
-<img src="Digital Turn in the Study of Islamic History/Slide37.png" alt="" style="object-fit: scale-down">
+<img src="Pasted image 20241028225353.png" alt="" style="object-fit: scale-down">
 </div></script></section></section><section  data-markdown><script type="text/template"><!-- .slide: class="drop" -->
 <div class="" style="position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center" absolute="true">
 
 ## Thank you
-</div></script></section><section  data-markdown><script type="text/template">
-</script></section></div>
+</div></script></section><section  data-markdown><script type="text/template"></script></section></div>
     </div>
 
     <script src="dist/reveal.js"></script>
